--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ body{
   justify-content: space-between;
 }
 nav.navbar.navbar-expand-sm {
-  background: #fff;
+  background: #e9e4e070;
   box-shadow: rgb(0 0 0 / 4%) 0px 4px 4px;
   align-items: center;
   padding: 14px 0;
@@ -75,7 +75,7 @@ a.navbar-brand:hover, a.navbar-brand:focus{
 }
 ul.navbar-nav li a {
   color: #000000;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   line-height: 18.78px;
   text-decoration: none;
@@ -119,7 +119,8 @@ ul.navbar-nav.navbar_right li {
   display: none;
 }
 .mobile_logo{
-  display: none;
+  background: url('../public/logo-004.png');
+
 }
 body {
   height: 100%;
@@ -369,7 +370,7 @@ a.navbar-brand {
   display: none !important;
 }
 .navbar_box a.navbar-brand{
-  font-size: 25px;
+  font-size: 30px;
   position: relative;
   top: 8px;
 }
