--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 .App {
   text-align: center;
 }
@@ -23,6 +27,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
 
 .App-link {
   color: #61dafb;
@@ -126,7 +131,7 @@ body {
   height: 100%;
 }
 .full_height{
-  background: url('../public/home_bg.png');
+  ####background: url('../public/home_bg.png');
   background-position: bottom right;
   background-repeat: no-repeat;
   height: calc(100vh - 80px);
@@ -584,6 +589,7 @@ a.navbar-brand{
   font-family: sans-serif;
   min-width: 750px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+
 }
 
 .styled-table thead tr {
@@ -595,6 +601,7 @@ a.navbar-brand{
 .styled-table th,
 .styled-table td {
     padding: 12px 15px;
+    text-align: center;
 }
 
 
@@ -613,5 +620,9 @@ a.navbar-brand{
 .styled-table tbody tr.active-row {
   font-weight: bold;
   color: #009879;
+}
+
+.personal-space {
+  font-size: 20px;
 }
 /* New css end */
