--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,6 +1,16 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
 
 .App {
   text-align: center;
@@ -124,14 +134,14 @@ ul.navbar-nav.navbar_right li {
   display: none;
 }
 .mobile_logo{
-  background: url('../public/logo-004.png');
+  background: url('/public/logo-004.png');
 
 }
 body {
   height: 100%;
 }
 .full_height{
-  ####background: url('../public/home_bg.png');
+  background: url('/public/home_bg.png');
   background-position: bottom right;
   background-repeat: no-repeat;
   height: calc(100vh - 80px);
