update theme, icons

--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.pb-14 {
+    padding-bottom: 1rem;
+}
